--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -33,6 +33,9 @@
                  <figure>
                  <img src="https://media.vogue.es/photos/648718d34541a298defedf02/1:1/w_1200,h_1200,c_limit/BAR-00238.jpg" width="200" height="200">
                 </figure>
+                figure>
+                 <img src="https://media.vogue.es/photos/648718d34541a298defedf02/1:1/w_1200,h_1200,c_limit/BAR-00238.jpg" width="200" height="200">
+                </figure>
                 
                     <p>
                     <br>
