--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -32,10 +32,10 @@
                  <!-- Esto es como poner una imagen, depende si le pone el atributo o no cambias el tamaño aca o en css-->
                  <figure>
                  <img src="https://media.vogue.es/photos/648718d34541a298defedf02/1:1/w_1200,h_1200,c_limit/BAR-00238.jpg" width="200" height="200">
-                </figure>
-                figure>
+                 </figure>
+                 <figure>
                  <img src="https://media.vogue.es/photos/648718d34541a298defedf02/1:1/w_1200,h_1200,c_limit/BAR-00238.jpg" width="200" height="200">
-                </figure>
+                 </figure>
                 
                     <p>
                     <br>
