--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <html>
         <head>
+            <script src="https://kit.fontawesome.com/f1c41f8039.js" crossorigin="anonymous"></script>
+            <link rel="stylesheet" type="text/css" href="Visualitos.css">
             <!--meta charset="utf-8"-->
             <title>
                 Holaaaaa
@@ -13,14 +15,17 @@
 
 
         </head>
+
         <body>
+            
             <form action="" method="post">
                 <label>Usuario <input type="text" name="Usuario "></label>
 
             </form>
         </body>
         <body>
-                 <!-- Esto es como poner un link, el atributo tiene que ser href, y el atributo target indica si se abre sobre la pagina actual o una nueva(nueva es _blank, _self es la actual, para mas, busca en google),
+            <i class="fa-solid fa-house fa-beat"></i>
+             <!-- Esto es como poner un link, el atributo tiene que ser href, y el atributo target indica si se abre sobre la pagina actual o una nueva(nueva es _blank, _self es la actual, para mas, busca en google),
                      si href esta vacio, ya funca como un enlace     -->
                  <a href="https://www.google.com/search?q=barbie&rlz=1C1ONGR_esAR988AR988&oq=barbie&gs_lcrp=EgZjaHJvbWUqBggAEEUYOzIGCAAQRRg7MgYIARBFGEAyCQgCECMYJxiKBTIMCAMQLhhDGLEDGIoFMgkIBBAuGEMYigUyCQgFEC4YQxiKBTIGCAYQRRg8MgYIBxBFGD3SAQc3NDRqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8"
                   target="_blank">Barbie</a>
