--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="es">
         <head>
             <script src="https://kit.fontawesome.com/f1c41f8039.js" crossorigin="anonymous"></script>
             <link rel="stylesheet" type="text/css" href="Visualitos.css">
@@ -8,8 +8,8 @@
                 Holaaaaa
             </title>
             <header>Tenemos titulo muchaches</header>
-            <br>
-
+            <br
+   
 
 
 
