--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -7,14 +7,16 @@
             <title>
                 Holaaaaa
             </title>
-            <header>Tenemos titulo muchaches</header>
-            <br
+            <header><p>Tenemos titulo muchaches, intentemos
+                centrarlo un poco</p>
+            </header>
+            <br>
    
 
 
 
 
-        </head>
+         </head>
 
         <body>
             
@@ -42,7 +44,7 @@
                  <img src="https://media.vogue.es/photos/648718d34541a298defedf02/1:1/w_1200,h_1200,c_limit/BAR-00238.jpg" width="200" height="200">
                  </figure>
                 
-                    <p>
+                    <p id="Aloja"> 
                     <br>
                  <!-- Esto es negrita--> 
                  <b>opá</b> <strong>Aloja</strong>
