--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -26,6 +26,7 @@
             </form>
         </body>
         <body>
+            <article></article>
             <i class="fa-solid fa-house fa-beat"></i>
              <!-- Esto es como poner un link, el atributo tiene que ser href, y el atributo target indica si se abre sobre la pagina actual o una nueva(nueva es _blank, _self es la actual, para mas, busca en google),
                      si href esta vacio, ya funca como un enlace     -->
@@ -92,7 +93,7 @@
 
                 <iframe
                     
-
+                 
                  width="560" height="315" src="https://www.youtube.com/embed/CHsyUunrHTc" title="YouTube video player" frameborder="0"
                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 
