--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -93,6 +93,37 @@
                     <p class="flex-item-10">holaa</p>
                   </div>
 
+                  <br><br><br><br>
+
+                  <div class="grid">
+                    <div class="grid1">1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>8</div>
+                    <div>9</div>
+                  </div>
+
+                  <br><br><br><br>
+
+
+                  <div class="gridNuevo">
+                    <div class="gridNuevo1">0</div>
+                    <div>A</div>
+                    <div>B</div>
+                    <div>C</div>
+                    <div>D</div>
+                    <div>E</div>
+                    <div>F</div>
+                    <div>G</div>
+                    <div>H</div>
+                  </div>
+
+
+
 
 
                 
