Clase formas funciones2

--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -16,7 +16,7 @@
              
              <header> <div class="cotnainer-fluid">
                 <p>Tenemos titulo muchaches, intentemos
-                centrarlo un poco</p>
+                centrarlo un poco, master</p>
              </div>
              </header>
              <br><div class="cotnainer-fluid"></div>
