--- a/BarbieBaldur.html
+++ b/BarbieBaldur.html
@@ -37,6 +37,8 @@
 
 
          <body>
+            <button class="boton">Mi botón</button>
+
             
             <form action="" method="post">
                 <label>Usuario <input type="text" name="Usuario "></label>
